tests/snapshots/run__io_file@io__basic.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/basic.hvm
---
Higher-order Virtual Machine 2
Result: ((@IO/Done/tag (@IO/MAGIC (((0 (* x0)) x0) x1))) x1)
