tests/snapshots/run__io_file@io__create_directory.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/create_directory.hvm
---
Result: ((@IO/Done/tag (@IO/MAGIC (((0 (* x0)) x0) x1))) x1)
