tests/snapshots/run__io_file@io__delete_dir_file.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/delete_dir_file.hvm
---
Result: ((@IO/Done/tag (@IO/MAGIC (((1 (((2 (+2 x0)) x0) x1)) x1) x2))) x2)
