tests/snapshots/run__io_file@io__delete_empty_dir.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/delete_empty_dir.hvm
---
Result: ((@IO/Done/tag (@IO/MAGIC (((0 (* x0)) x0) x1))) x1)
