tests/snapshots/run__io_file@io__invalid-name.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/invalid-name.hvm
---
Result: ((@IO/Done/tag (@IO/MAGIC (((1 (((1 x0) x0) x1)) x1) x2))) x2)
