tests/snapshots/run__io_file@io__open1.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/open1.hvm
---
Result: ((@IO/Done/tag (@IO/MAGIC (((0 (3 x0)) x0) x1))) x1)
