tests/snapshots/run__io_file@io__open3.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/open3.hvm
---
Result: ((@IO/Done/tag (@IO/MAGIC (((1 (((0 x0) x0) x1)) x1) x2))) x2)
