tests/snapshots/run__io_file@io__read_and_print.hvm.snap
---
source: tests/run.rs
expression: c_output
input_file: tests/programs/io/read_and_print.hvm
---
What is your name?
Hello, 'io from the tests'!
Result: 42
